--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/chrisgo/handlebars-form-helper/issues"
   },
-  "homepage": "https://github.com/chrisgo/handlebars-form-helper#readme"
+  "homepage": "https://github.com/chrisgo/handlebars-form-helper#readme",
+  "dependencies": {
+    "handlebars": "^4.0.12"
+  }
 }
